<resources>
    <string name="app_name">Formula One</string>
    <string name="selected_item">Selected item:</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="have_account_sign_in">have account? sign in!</string>
    <string name="create_f1_account">Create F1 account</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="passwordCaps">PASSWORD</string>
    <string name="email_address_caps">EMAIL ADDRESS</string>
    <string name="log_out">Log Out</string>
    <string name="drivers">Drivers</string>
    <string name="teams">Teams</string>
    <string name="settings">Settings</string>
    <string name="races">Races</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nationality">Nationality</string>
    <string name="bio">Bio</string>
    <string name="wins">Wins</string>
    <string name="current_position">Current Position</string>
    <string name="_2022_standings">2022 Standings</string>
    <string name="now_loading">Now Loading</string>
    <string name="your_favourite_teams">your favourite teams</string>
    <string name="track_name">Track name</string>
    <string name="options_available">Options Available</string>
    <string name="the_next_race_will_be">The next race will be:</string>
    <string name="login">Login</string>
    <string name="search_here">search here</string>
    <string name="country">Country</string>
    <string name="team_name">Team Name</string>
    <string name="yes_sure">YES</string>
    <string name="you_bought_ticket">Thanks! you bought ticket! check your cart!</string>
    <string name="canceled">you canceled purchase process</string>
    <string name="check_your_tickets_here">Check Your Tickets Here</string>
    <string name="poles">Poles</string>
    <string name="or_sign_in_with_otp">or sign in with OTP</string>
    <string name="otp_sign_in">OTP Sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_code">Get Code</string>
    <string name="verify_code">verify code</string>
    <string name="otp">OTP</string>


    <string-array name="index">
        <item>+995 GEO</item>
        <item>+1 USA</item>
        <item>+123 UKR</item>
    </string-array>

</resources>